trunk/OldArchive/1e2c1dd1de841718f0392f40887eb975-3725be9f9ce62f113fc473b4ae69c419/output
+ g++ -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp:1:1: error: expected unqualified-id before ‘,’ token
 ,extern int i;
 ^
main.cpp:1:2: error: expected unqualified-id before ‘extern’
 ,extern int i;
  ^
main.cpp:2:7: error: explicit qualification in declaration of ‘i’
 int ::i;
       ^
